--- a/index.html
+++ b/index.html
@@ -6,10 +6,313 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- font awsome -->
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <!-- gogle fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;1,700&family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,100&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
+    <main>
+        <header class="links-nav">
+            <h2>Influencer products</h2>
+            <nav>
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">PRODUC</a></li>
+                    <li><a href="">SIGN UP</a></li>
+                    <li><a href="">LOGIN IN</a></li>
+                    <a href=""> <i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                </ul>
+            </nav>
+        </header>
 
+        <section class="container">
+            <div class="blog-title">
+                <div class="blog">
+                    <h1 class="head-title">Start your Journey as
+                        Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error animi quod in eveniet mollitia
+                        non
+                        laborum ex iure rerum, officiis quis aliquam natus iusto, necessitatibus, reiciendis delectus at
+                        dolores incidunt!</p>
+                    <a href class="button-click">Prebook now <i class="fa-solid fa-diamond-turn-right"></i></a>
+                </div>
+                <div class="camre">
+                    <img src="images/shape-7.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- ANTOER SECTION COLLECTION -->
+        <section class="container">
+            <h1>Popular Colection</h1>
+            <div class="all-section">
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/tripod.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/action.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/airpod.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/drone.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/camera.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/lights.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/mic.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/setup.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/single-light.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/camera.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/single-light.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="populer-collection">
+                    <div class="top-colection">
+                        <div class="colection-pic">
+                            <img src="images/tripod.png" alt="">
+                        </div>
+                        <div class="coletion-name">
+                            <h3>Flex Tripod</h3>
+                            <p>$50.48</p>
+                        </div>
+                        <div class="colecti-info">
+
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <span><i class="fa-solid fa-star fill"></i></span>
+                            <div class="ditals">Wordwide shifting available
+                                Buyers protection possible!</div>
+                        </div>
+
+                    </div>
+                </article>
+
+
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
